--- a/Changes
+++ b/Changes
@@ -1,4 +1,21 @@
 Revision history for Perl extension JSON::PC.
 
+## DEPRECATED #####################################################
+# This module is too buggy and is not maintained.
+# Please try to use JSON::XS which is faster than JSON::Syck and
+# properly works.
+#
+# Additionally, JSON module now use JSON::XS as the backend module
+# and if not available, it uses the pure Perl module JSON::PP.
+# Theire interfaces are incompatible to old JSON module (ver 1.xx).
+#
+# See to the new JSON module (ver 2.xx).
+###################################################################
+
+
+0.02  Thu Dec 27 18:48:13 2007
+	- deprecated.
+            please check JSON and JSON::XS instead.
+
 0.01  Thu Apr 20 18:20:03 2006
 	- original version
